defmt/tests/ui/fail/panic-handler-export-name.stderr
error: `#[panic_handler]` attribute cannot be used together with `#[export_name]`
 --> $DIR/panic-handler-export-name.rs:5:1
  |
5 | #[export_name = "hello"]
  | ^^^^^^^^^^^^^^^^^^^^^^^^
